dev-cluster/infrastructure/gateway-api/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: cilium:gateway.networking.k8s.io/GatewayClass:kube-system/cilium
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
  description: The default Cilium GatewayClass
