dev-cluster/infrastructure/gateway-api/httproute-redirect.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: http-to-https-redirect
    namespace: gateway-system
  spec:
    hostnames:
    - '*.pukarsubedi.com'
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: gateway-system
      sectionName: http
    rules:
    - filters:
      - requestRedirect:
          scheme: https
          statusCode: 301
        type: RequestRedirect
      matches:
      - path:
          type: PathPrefix
          value: /
kind: List
metadata: {}
